little css fix of border not showing on the left side

--- a/css/sass/co2ok.scss
+++ b/css/sass/co2ok.scss
@@ -7,6 +7,7 @@
      color:#606468;
      z-index: 10;
      width: 259px;
+     margin-left: 3px;
 
 
      .co2ok_payoff {
